Update entrypoint